plugins {
  id "java"

  alias libs.plugins.spotless
  alias libs.plugins.grgit
  alias libs.plugins.sonarQube

  id "licensing-defaults"
  id "sonarqube-defaults"
}

group = gurkenlabs_group

def javaLanguageVersion = JavaLanguageVersion.of(25)
def javaVersion = JavaVersion.VERSION_25

allprojects {
  plugins.withType(JavaPlugin).configureEach {
    java {
      toolchain {
        languageVersion = javaLanguageVersion
      }
      sourceCompatibility = javaVersion
      targetCompatibility = javaVersion
    }

    tasks.withType(JavaCompile).configureEach {
      options.release = 25
    }

    tasks.withType(Test).configureEach {
      jvmArgs "--enable-native-access=ALL-UNNAMED"
    }
  }
}
